# file_generator_etl

./: hello.py  pipeline.py  pyproject.toml
app/: database.py  models.py
app/database/: db.py  models.py
app/insert_into_s3/: insert_csv.py
app/load_into_db/: load.py
producer/: generator.py
